Finished modifying the login provider. Works now with MyOzinga prod and staging. Still need to adjust in the future to support other external apps.